# mlx-od-moe

./: .gitignore  AGENT.md  ARCHITECTURE.md  COMPLETION_SUMMARY.md  OD_MOE_IMPLEMENTATION.md  README.md  SHADOW_MODEL_COMPLETE.md  pyproject.toml
.gemini/antigravity/brain/: implementation_plan.md  task.md  walkthrough.md
.serena/: project.yml
convert/: README.md  __init__.py  create_toy_model.py  gguf_to_od_moe.py  safetensors_to_od_moe.py
docs/plans/: 2026-02-01-gguf-converter-completion.md  2026-02-01-gguf-converter-implementation.md  2026-02-01-shadow-model-complete.md  2026-02-01-shadow-model-implementation.md
examples/: train_shadow_example.py
mlx_od_moe/: __init__.py  expert_store.py  gguf_expert_store.py  gguf_tokenizer.py  model.py  od_moe_layer.py  qwen3_next_od_model.py  server.py  shadow_model.py  weight_loader.py
mlx_od_moe/training/: __init__.py  collect_training_data.py  train_shadow.py
tests/: __init__.py  test_base_extraction.py  test_converter_integration.py  test_expert_extraction.py  test_expert_store.py  test_gguf_parser.py  test_gguf_tokenizer_utils.py  test_model.py  test_od_moe_layer.py  test_performance.py  test_safetensors_conversion.py  test_server_debug.py  test_server_preprocess.py  test_shadow_model.py  test_toy_model.py  test_weight_loader.py
tools/: extract_chat_template.py
