[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-od-moe"
version = "0.1.0"
description = "On-Demand Mixture of Experts for Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kat", email = "katielo522@gmail.com"}
]

dependencies = [
    "mlx>=0.21.0",
    "mlx-lm>=0.20.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
    "flask>=3.0.0",
    "gguf>=0.10.0",
    "psutil>=5.9.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlx_od_moe*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
